Fronted feature functions created

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,46 +108,35 @@
                           {% if dataset %}
             <li class="nav-item">
               <a class="nav-link" href="/datasets/{{dataset}}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                  <span class="ml-2">Summary</span>
+                <img src="https://img.icons8.com/small/35/000000/summary-list.png"/>
+                    <span class="ml-2">Data Info</span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/datasets/{{dataset}}/preprocessing">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+                <img src="https://img.icons8.com/ios/30/000000/hashtag-activity-grid.png"/>
                   <span class="ml-2">Preprocessing</span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/datasets/{{dataset}}/graphs">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-                  <span class="ml-2">Visualize</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/datasets/{{dataset}}/models">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-                  <span class="ml-2">Models</span>
+                <img src="https://img.icons8.com/ios-filled/20/000000/combo-chart--v2.png"/>
+                  <span class="ml-2">Design Space Explorer</span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/datasets/{{dataset}}/sequential">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-                  <span class="ml-2">Sequential</span>
+                <img src="https://img.icons8.com/external-icongeek26-outline-icongeek26/20/000000/external-connection-project-work-icongeek26-outline-icongeek26.png"/>
+                  <span class="ml-2">Benchmarking</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/datasets/{{dataset}}/discovery">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-                  <span class="ml-2">MD</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/datasets/{{dataset}}/predict">
+              <a class="nav-link" href="/datasets/{{dataset}}/models">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
-                  <span class="ml-2">Predictions</span>
+                  <span class="ml-2">Materials Discovery</span>
               </a>
             </li>
+
             <li class="nav-item">
               <a class="btn btn-sm btn-secondary ml-3 mt-2" href="{{tutorial}}">
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-book" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -159,6 +148,7 @@
               <li class="nav-item">
                 <li class="nav-item">
                   <a class="btn btn-sm btn-primary ml-3 mt-2" href="https://bam.de">
+                    <img src="https://img.icons8.com/color/48/000000/submit-progress--v3.png"/>
                     By BAM ❤️
                   </a>
                 </li>
