--- a/templates/discovery.html
+++ b/templates/discovery.html
@@ -10,41 +10,122 @@
         <li class="breadcrumb-item active" aria-current="page">Overview</li>
     </ol>
   </nav>
-  <form class="form-group" method="post" action='/datasets/{{dataset}}/material_discovery'>
+  <form class="form-group" method="post" action='/datasets/{{dataset}}/sequentialprocess'>
     <h3 class="form-features-heading" align=''>Settings</h3>
     <br>
 
     <!-- selecting features, fixed_target and target data -->
 <!-- ------------------------------------------------------------------------------- -->
-<!-- selecting features, fixed_target and target data -->
-<!-- ------------------------------------------------------------------------------- -->
-<div class="row">
-<div class="col-sm-5">
-  <h6>Features:</h6>
-   <select multiple name="features" class="form-control" required>
-      <option value=""></option>
-        {% for col in columns %}
-          <option value="{{col}}">{{col}}</option>
-        {% endfor %}
-  </select>
-</div>
+  <div class="row">
+    <div class="col-sm-5">
+      <h6>input Features:</h6>
+       <select multiple id="dm_feature" name="features" class="form-control" required>
+  		    <option value=""></option>
+            {% for col in columns %}
+  			      <option value="{{col}}">{{col}}</option>
+  		      {% endfor %}
+      </select>
+    </div>
 
-<div class="col-sm-4">
-  <h6>Target Variable:</h6>
-    <select multiple name="targets" class="form-control" required>
-      {% for col in columns %}
-        <option value="{{col}}">{{col}}</option>
-      {% endfor %}
-    </select>
-</div>
+    <div class="col-sm-4">
+      <h6>Target Variable:</h6>
+        <select multiple id="dm_target" name="targets" class="form-control" required>
+        </select>
+    </div>
+    <div class="col-sm-3">
+      <h6>Fixed Target:</h6>
+        <select multiple id="dm_fixedtargets" name="fixedtargets" class="form-control" required>
 
-</div>
-<br>
+        </select>
+    </div>
+  </div>
+  <br>
 <!-- ------------------------------------------------------------------------------- -->
-<!-- ------------------------------------------------------------------------------- -->
-<br><br>
-  <button class="btn btn-warning btn-block" type="submit" align='center'>Fit Model</button>
-</form>
+<!-- selecting Initial sample size and model_selection -->
+  <div class="row">
+    <div class="col-sm-5">
+      <label for="customRange2" class="form-label">Initial Samples Size:</label>
+      <input name='initial_sample' type="range" class="form-range form-range-thumb-width" min="1" max="100" id="customRange2" onInput="$('#rangeval').html($(this).val())">
+      <span id="rangeval"><!-- Default value --></span>
+    </div>
 
+    <div class="col-sm-4">
+      <h7>Model:</h7>
+        <select name="models" class="form-control" >
+          <option hidden>Select Model</option>
+          <option value="Gaussian Process Regression (GPR)">Gaussian Process Regression (GPR)</option>
+          <option value="lolo Random Forrest (RF)">lolo Random Forrest (RF)</option>
+          <option value="Decision Trees (DT)">Decision Trees (DT)</option>
+          <option value="Random Forrest (RFscikit)">Random Forrest (RFscikit)</option>
+        </select>
+    </div>
+  </div>
+<!-- ------------------------------------------------------------------------------- -->
+    <br>
+    <div class="row">
+
+    <div class="col-sm-4">
+      <h7>Strategy:</h7>
+        <select id="strategy" name="strategies" class="form-control">
+          <option hidden>Select Strategy</option>
+          <option value="MEI (exploit)">MEI (exploit)</option>
+          <option value="MLI (exploit & explore)">MLI (exploit & explore)</option>
+        </select>
+    </div>
+
+    <div class="col-sm-3" id="sigma">
+      <label for="customRange5" class="form-label">sigma factor:</label>
+      <input name='initial_sample' type="range" class="form-range form-range-thumb-width" min="0.1" max="5.8" step="0.01" id="customRange5" onInput="$('#rangeval5').html($(this).val())">
+      <span id="rangeval5"><!-- Default value --></span>
+    </div>
+  </div>
+  <!-- ------------------------------------------------------------------------------- -->
+  <br><br>
+    <button class="btn btn-warning btn-block" type="submit" align='center'>Fit Model</button>
+  </form>
+  <script>
+    $("#strategy").change(function(){
+      var abc = $('#strategy').val();
+      if (abc == 'MEI (exploit)'){
+        //alert('hello');
+        //$document.getElementByID('first').show();
+        $('#sigma').hide();
+      } else if (abc == 'MLI (exploit & explore)'){
+        $('#sigma').show();
+      } else {
+        alert('select a option');
+      }
+
+    });
+
+    $('#dm_feature').change(function(){
+      var mylist = $('#dm_feature').val();
+      if ($("#dm_feature").find('option').not(':selected').length > 0){
+        var notSelected = $("#dm_feature").find('option').not(':selected');
+        var unselectedgltype = notSelected.map(function () { return this.value; }).get();}
+
+      $('#select_target').empty();
+        //alert(unselectedgltype);
+      $(unselectedgltype).each(function(index, element) {
+        $('<option/>').val(element).text(element).appendTo('#select_target');
+      });
+    });
+
+    $('#dm_target').change(function(){
+      var mylist = $('#dm_target').val();
+      if ($("#dm_target").find('option').not(':selected').length > 0){
+        var notSelected2 = $("#dm_target").find('option').not(':selected');
+        var unselectedgltype2 = notSelected2.map(function () { return this.value; }).get();}
+
+      $('#dm_fixedtargets').empty();
+
+        //alert(unselectedgltype);
+      $(unselectedgltype2).each(function(index, element) {
+        $('<option/>').val(element).text(element).appendTo('#dm_fixedtargets');
+
+      });
+    });
+
+  </script>
 </main>
 {% endblock %}
