--- a/templates/sequential.html
+++ b/templates/sequential.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+{{n}}
 
 <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4">
   <nav aria-label="breadcrumb">
@@ -17,7 +17,7 @@
     <!-- selecting features, fixed_target and target data -->
 <!-- ------------------------------------------------------------------------------- -->
   <div class="row">
-    <div class="col-sm-5">
+    <div class="col-sm-4">
       <h6>Features:</h6>
        <select multiple id="select_feature" name="features" class="form-control" required>
   		    <option value=""></option>
@@ -32,20 +32,33 @@
         <select multiple id="select_target" name="targets" class="form-control" required>
         </select>
     </div>
-    <div class="col-sm-3">
-      <h6>Fixed Target:</h6>
-        <select multiple id="select_fixedtargets" name="fixedtargets" class="form-control" required>
+
+    <div class="col-sm-4">
+      <h6>A-priori inforation:</h6>
+        <select multiple id="select_fixedtargets" name="fixedtargets" class="form-control">
 
         </select>
     </div>
   </div>
   <br>
 <!-- ------------------------------------------------------------------------------- -->
+<div class="row" id="sub_option">
+  <div class="col-sm-4" id="sub_option2">
+  </div>
+</div>
+<div class="row" id="sub1_option">
+  <div class="col-sm-4" id="sub_option1">
+  </div>
+</div>
+  <br>
+    <br>
+ <!-- ------------------------------------------------------------------------------- -->
+
 <!-- selecting Initial sample size and model_selection -->
   <div class="row">
-    <div class="col-sm-5">
+    <div class="col-sm-4">
       <label for="customRange2" class="form-label">Initial Samples Size:</label>
-      <input name='initial_sample' type="range" class="form-range form-range-thumb-width" min="1" max="100" id="customRange2" onInput="$('#rangeval').html($(this).val())">
+      <input name='initial_sample' type="number" class="form-control" min="1" max="100" id="customRange2">
       <span id="rangeval"><!-- Default value --></span>
     </div>
 
@@ -60,16 +73,17 @@
         </select>
     </div>
 
-    <div class="col-sm-3" id="prediction">
+    <div class="col-sm-4" id="prediction">
       <label for="customRange4" class="form-label">Prediction quantile:</label>
       <input name='dist' type="range" class="form-range form-range-thumb-width" min="1" max="100" id="customRange4" onInput="$('#rangeval4').html($(this).val())">
       <span id="rangeval4"><!-- Default value --></span>
     </div>
   </div>
 <!-- ------------------------------------------------------------------------------- -->
+
     <br>
     <div class="row">
-      <div class="col-sm-5">
+      <div class="col-sm-4">
         <label for="customRange3" class="form-label"># of SL runs:</label>
         <input name='iterate' type="range" class="form-range form-range-thumb-width" min="1" max="100" id="customRange3" onInput="$('#rangeval2').html($(this).val())">
         <span id="rangeval2"><!-- Default value --></span>
@@ -87,7 +101,7 @@
         </select>
     </div>
 
-    <div class="col-sm-3" id="sigma">
+    <div class="col-sm-4" id="sigma">
       <label for="customRange5" class="form-label">sigma factor:</label>
       <input name='initial_sample' type="range" class="form-range form-range-thumb-width" min="0.1" max="5.8" step="0.01" id="customRange5" onInput="$('#rangeval5').html($(this).val())">
       <span id="rangeval5"><!-- Default value --></span>
@@ -98,6 +112,13 @@
     <button class="btn btn-warning btn-block" type="submit" align='center'>Fit Model</button>
   </form>
   <script>
+
+    $(document).ready(function(){
+    //  $("#sub_option").show();
+
+
+    });
+
     $("#strategy").change(function(){
       var abc = $('#strategy').val();
       if (abc == 'MEI (exploit)'){
@@ -124,7 +145,7 @@
     });
 
     $('#select_feature').change(function(){
-      var mylist = $('#select_feature').val();
+
       if ($("#select_feature").find('option').not(':selected').length > 0){
         var notSelected = $("#select_feature").find('option').not(':selected');
         var unselectedgltype = notSelected.map(function () { return this.value; }).get();}
@@ -138,9 +159,12 @@
 
     $('#select_target').change(function(){
       var mylist = $('#select_target').val();
+
       if ($("#select_target").find('option').not(':selected').length > 0){
         var notSelected2 = $("#select_target").find('option').not(':selected');
         var unselectedgltype2 = notSelected2.map(function () { return this.value; }).get();}
+
+
 
       $('#select_fixedtargets').empty();
 
@@ -149,7 +173,87 @@
         $('<option/>').val(element).text(element).appendTo('#select_fixedtargets');
 
       });
+      // how by selecting a feature, the min/max, threshold, etc should be visible.
+      var3 = $('#select_target').val().length;
+      $('#sub_option').empty();
+      for (i=0; i< var3; i++) {
+
+      //console.log($('#sigma2').val());
+      //$('#sigma2');
+        arr = $('#select_target').val();
+
+//$('#sub_option').text($('#sigma2').val());
+        $('#sub_option').append(`
+          <div class="col-sm-1">
+          <label for=${arr[i]}>${arr[i]}</label>
+          </div>
+          <div class="col-sm-2">
+          <label for=${arr[i]}>minimize</label>
+
+          <input type="radio" name="R_${arr[i]}" value='min'></input></br>
+          <label for=${arr[i]}>maximize</label>
+          <input type="radio" name="R_${arr[i]}" value="max"></input>
+          </div>
+
+          <div class="col-sm-3">
+          <label for=${arr[i]}>Check to use Threshold</label>
+
+          <input type="checkbox" name="C_${arr[i]}" value=True></input>
+          </div>
+          <div class="col-sm-1">
+          <label for=${arr[i]}>${arr[i]}</label>
+          </div>
+          <div class="col-sm-2">
+          <input type="number" name="N1_${arr[i]}" step="1"> </input>
+          </div>
+          <div class="col-sm-1">
+          <label for=${arr[i]}> Weight ${arr[i]}</label>
+          </div>
+          <div class="col-sm-2">
+          <input type="number" name="N2_${arr[i]}" step="1"> </input>
+          </div> </br>`);
+      };
+
+
     });
+    $('#select_fixedtargets').change(function(){
+      priori = $('#select_fixedtargets').val().length;
+      $('#sub1_option').empty();
+      for (j=0; j< priori; j++) {
+        arr1 = $('#select_fixedtargets').val();
+        $('#sub1_option').append(`
+          <div class="col-sm-1">
+          <label for=${arr1[j]}>${arr1[j]}</label>
+          </div>
+          <div class="col-sm-2">
+          <label for=${arr1[j]}>minimize</label>
+
+          <input type="radio" name="R1_${arr1[j]}" value="min"></input></br>
+          <label for=${arr1[j]}>maximize</label>
+          <input type="radio" name='R1_${arr1[j]}' value="max"></input>
+          </div>
+
+          <div class="col-sm-3">
+          <label for=${arr1[j]}>Check to use Threshold</label>
+
+          <input type="checkbox" name="C1_${arr1[j]}" value='1'></input>
+          </div>
+          <div class="col-sm-1">
+          <label for=${arr1[j]}>${arr1[j]}</label>
+          </div>
+          <div class="col-sm-2">
+          <input type="number" name="N11_${arr1[j]}" step="1"> </input>
+          </div>
+          <div class="col-sm-1">
+          <label for=${arr1[j]}> Weight ${arr1[j]}</label>
+          </div>
+          <div class="col-sm-2">
+          <input type="number" name="N22_${arr1[j]}" step="1"> </input>
+          </div> </br>`);
+      };
+
+    });
+
 
   </script>
 </main>
