--- a/templates/sequential.html
+++ b/templates/sequential.html
@@ -214,10 +214,10 @@
           <input type="number" name="N1_${arr[i]}" step="1"> </input>
           </div>
           <div class="col-sm-1">
-          <label for=${arr[i]}> Weight ${arr[i]}</label>
+          <label for=${arr[i]}> Weight ${arr[i]} </label>
           </div>
           <div class="col-sm-2">
-          <input type="number" name="N2_${arr[i]}" step="1"> </input>
+          <input type="number" name="N2_${arr[i]}" value="1" step="1"> </input>
           </div> </br>`);
       };
 
