--- a/templates/dataset.html
+++ b/templates/dataset.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
-
 {% block content %}
+
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.10.18/sl-1.3.0/datatables.min.css"/>
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.10.18/sl-1.3.0/datatables.min.js"></script>
+
 
 <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4">
 
@@ -12,7 +15,7 @@
       </ol>
   </nav>
 	<br>
-
+<!--
 	<h5 class="card-header">Sample of data:</h5>
 			<div class="card-body mx-auto">
 					{{head | safe}}
@@ -22,6 +25,64 @@
 			<div class="card-body mx-auto">
 					{{description | safe}}
 			</div>
+-->
+<div class="mt-4">
+	<h5 class="">Sample of data:</h5>
+  <table id="header_dataset" class="display hover  compact cell-border table nowrap responsive" style="width: 100%">
+    <thead>
+      <tr>
+        {% for header in head_df %}
+          <th>{{header}}</th>
+        {% endfor %}
+      </tr>
+    </thead>
+    <tbody>
+      {% for index, row in head_df.iterrows() %}
+        <tr>
+          {% for col in head_df %}
+            <td>{{row[col]}}</td>
+          {% endfor %}
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+</div>
+
+<script type='text/javascript'>
+  $('#header_dataset').DataTable();
+</script>
+
+<!--
+  This part is for describing the data such as the mean value...
+
+<div class="mt-4">
+	<h5 class="">Sample of data:</h5>
+  <table id="description_dataset" class="display hover  compact cell-border table nowrap responsive" style="width: 100%">
+    <thead>
+      <tr>
+        {% for d in des %}
+          <th>{{d}}</th>
+        {% endfor %}
+      </tr>
+    </thead>
+    <tbody>
+      {% for index, row in des.iterrows() %}
+        <tr>
+          {% for col in des %}
+            <td>{{row[col]}}</td>
+          {% endfor %}
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+</div>
+
+<script type='text/javascript'>
+  $('#description_dataset').DataTable();
+</script>
+-->
 </main>
 
 {% endblock %}
