--- a/templates/discovery.html
+++ b/templates/discovery.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="col-sm-4">
-      <h7>Model:</h7>
+      <h7>Modelssss:</h7>
         <select name="models" class="form-control" >
           <option hidden>Select Model</option>
           <option value="Gaussian Process Regression (GPR)">Gaussian Process Regression (GPR)</option>
@@ -75,7 +75,7 @@
 
     <div class="col-sm-3" id="sigma">
       <label for="customRange5" class="form-label">sigma factor:</label>
-      <input name='initial_sample' type="range" class="form-range form-range-thumb-width" min="0.1" max="5.8" step="0.01" id="customRange5" onInput="$('#rangeval5').html($(this).val())">
+      <input name='sigma_factor' type="range" class="form-range form-range-thumb-width" min="0.1" max="5.8" step="0.01" id="customRange5" onInput="$('#rangeval5').html($(this).val())">
       <span id="rangeval5"><!-- Default value --></span>
     </div>
   </div>
