--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
                     </ol>
                 </nav>
-                <h1 class="h2">Dashboard</h1>
+                <h1 class="h2"></h1>
                 <p>Please upload your dataset here.</p>
 
                 <!-- File upload  -->
@@ -79,6 +79,7 @@
 
 
                 </div>
+                <!--
                 <div class="row">
                     <div class="col-12 col-xl-8 mb-4 mb-lg-0">
                         <div class="card">
@@ -98,6 +99,9 @@
                         </div>
                     </div>
                 </div>
+                -->
+
+
                 <footer class="pt-5 d-flex justify-content-between">
                     <span>Copyright © 2022 <a href="https://bam.de">BAM</a></span>
                     <ul class="nav m-0">
