--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -1,38 +1,8 @@
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100;
-  padding: 90px 0 0;
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-  z-index: 99;
+#footer{
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    height: 35px;
+    width: 100%;
+    background: #1abc9c;
 }
-
-@media (max-width: 767.98px) {
-  .sidebar {
-    top: 11.5rem;
-    padding: 0;
-  }
-}
-
-.navbar {
-  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .1);
-}
-
-@media (min-width: 767.98px) {
-  .navbar {
-    top: 0;
-    position: sticky;
-    z-index: 999;
-  }
-}
-
-.sidebar .nav-link {
-  color: #333;
-}
-
-.sidebar .nav-link.active {
-  color: #0d6efd;
-}
-  
