--- a/templates/drawgraphs.html
+++ b/templates/drawgraphs.html
@@ -10,17 +10,13 @@
 
       </ol>
   </nav>
+  <div id='chart' class='chart'”></div>
+  <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+  <script type='text/javascript'>
+    var graphs = {{graphJSON | safe}};
+    Plotly.plot('chart',graphs,{});
+  </script>
 
-<br><br>
-<div class="mt-4">
-    {% for key, value in figs.items() %}
-		<h2 align='center'>{{key}}</h2>
-		<div style="display: flex; justify-content: center;">
-        <img src="data:image/png;base64, {{value}}" align='center'>
-		</div>
-	{% endfor %}
-
-</div>
 
 
 </main>
